--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "textutils",
+  "name": "deploy-textutils1",
+  "homepage": "https://pratha-m.github.io/deploy-course-textutils-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "dom": "^0.0.3",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
@@ -15,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
